--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,8 +1,23 @@
-spring.datasource.url=jdbc:h2:mem:testdb
-spring.datasource.driverClassName=org.h2.Driver
-spring.datasource.username=sa
-spring.datasource.password=
+#spring.datasource.url=jdbc:h2:mem:testdb
+##spring.datasource.driverClassName=org.h2.Driver
+##spring.datasource.username=sa
+##spring.datasource.password=
+##
+##spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
+### Enabling H2 Console
+##spring.h2.console.enabled=true
 
-spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
-# Enabling H2 Console
-spring.h2.console.enabled=true
+spring.application.name=product-server
+
+#datasource
+spring.datasource.url=jdbc:mysql://localhost:3306/loctb3?useUnicode=true&useLegacyDatetimeCode=false&serverTimezone=UTC&createDatabaseIfNotExist=true&allowPublicKeyRetrieval=true&useSSL=false
+#you should change it according to your credentials.
+spring.datasource.username=fpt
+spring.datasource.password=L2aswTCd
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+
+#This can be update, create, validate or none.
+spring.jpa.hibernate.ddl-auto=none
+
+#liquibase
+spring.liquibase.change-log=classpath:/db/changelog/db.changelog-master.xml
